<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <groupId>org.loadui</groupId>
    <artifactId>testFx</artifactId>
    <version>3.2.0-SNAPSHOT</version>
    <name>TestFX</name>
    <description>TestFX</description>
    <url>https://github.com/SmartBear/TestFX</url>

    <licenses>
        <license>
            <name>European Union Public Licence - EUPL v.1.1</name>
            <url>http://ec.europa.eu/idabc/eupl.html</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <scm>
        <url>https://github.com/SmartBear/TestFX.git</url>
    </scm>

    <profiles>
        <profile>
            <id>release</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-source-plugin</artifactId>
                        <version>2.2.1</version>
                        <executions>
                            <execution>
                                <phase>install</phase>
                                <goals>
                                    <goal>jar</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <version>2.9.1</version>
                        <executions>
                            <execution>
                                <phase>install</phase>
                                <goals>
                                    <goal>jar</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>1.4</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>install</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                        <configuration>
                            <ascDirectory>${project.build.directory}</ascDirectory>
                        </configuration>
                    </plugin>

                </plugins>
            </build>
        </profile>
    </profiles>

    <developers>
        <developer>
            <id>minisu</id>
            <name>Henrik Olsson</name>
            <url>https://github.com/minisu</url>
            <timezone>+1</timezone>
        </developer>
        <developer>
            <id>dainnilsson</id>
            <name>Dain Nilsson</name>
            <url>https://github.com/dainnilsson</url>
            <timezone>+1</timezone>
            <roles>
                <role>project founder</role>
                <role>former developer</role>
            </roles>
        </developer>
    </developers>

    <contributors>
        <contributor>
            <name>Philipp Keck</name>
            <url>https://github.com/Philipp91</url>
        </contributor>
        <contributor>
            <name>The LoadUI team</name>
            <url>https://github.com/SmartBear/loadui</url>
        </contributor>
    </contributors>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.14.1</version>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.3.1</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <dependencies> <!--
        <dependency>
            <groupId>com.oracle</groupId>
            <artifactId>javafx-runtime</artifactId>
            <version>2.2</version>
            <systemPath>${env.JAVA_HOME}/jre/lib/jfxrt.jar</systemPath>
            <scope>system</scope>
        </dependency> -->
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>14.0.1</version>
        </dependency>
        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest-all</artifactId>
            <version>1.3</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.10</version>
            <exclusions>
                <exclusion>
                    <groupId>org.hamcrest</groupId>
                    <artifactId>hamcrest-core</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
    </dependencies>
</project>
